# Yet-Another-BG3-Native-Mod-Loader

./: Cargo.toml  LICENSE  README.md  build.rs  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-debug.yml  build.yml
.zed/: settings.json
assets/: INSTRUCTIONS.txt  LOADER.DLL INSTRUCTIONS.txt  WHERE TO PUT LOADER.DLL.txt  install.bat  uninstall.bat
assets-autostart/: INSTRUCTIONS.txt
assets-autostarter/: INSTRUCTIONS.txt
assets-dbg/: INSTRUCTIONS.txt
assets-injector/: INSTRUCTIONS.txt
assets-watcher/: INSTRUCTIONS.txt
crates/autostart-installer/: Cargo.toml  build.rs  manifest.xml
crates/autostart-installer/src/: main.rs
crates/dll-loader/: Cargo.toml  build.rs  libname.cfg
crates/dll-loader/src/: config.rs  console.rs  hook.rs  iat.rs  lib.rs  logging.rs  paths.rs  plugin_loader.rs  popup.rs  utils.rs  wrapper.rs
crates/loader/: Cargo.toml  build.rs  manifest.xml
crates/loader/src/: client.rs  helpers.rs  lib.rs  loader.rs  logging.rs  panic.rs  panic_hook.rs  utils.rs
crates/shared/: Cargo.toml
crates/shared/src/: backtrace.rs  config.rs  lib.rs  paths.rs  pipe.rs  popup.rs  thread_data.rs  utils.rs
crates/shared/src/pipe/: commands.rs
crates/yabg3nml/: Cargo.toml  build.rs
crates/yabg3nml/src/: autostart.rs  cli.rs  console.rs  event.rs  event_loop.rs  helpers.rs  is_admin.rs  lib.rs  loader.rs  logging.rs  panic.rs  paths.rs  privileges.rs  process_watcher.rs  remote_thread.rs  run.rs  server.rs  setup.rs  single_instance.rs  stop_token.rs  thread_helpers.rs  tmp_loader.rs  tray.rs  utils.rs  wapi.rs
crates/yabg3nml/src/loader/: dirty.rs  write.rs
crates/yabg3nml/src/wapi/: enum_process_modules.rs  enum_processes.rs  enum_windows.rs  event_loop.rs  get_module_base_ex.rs  get_module_file_name_ex.rs  query_full_process_image_name.rs
crates/yet-another-bg3-mod-loader/: Cargo.toml  build.rs  manifest.xml
crates/yet-another-bg3-mod-loader/src/: backtrace.rs  cli.rs  console.rs  event.rs  helpers.rs  injector.rs  is_admin.rs  lib.rs  loader.rs  logging.rs  panic.rs  paths.rs  privileges.rs  process_watcher.rs  server.rs  setup.rs  single_instance.rs  tmp_loader.rs  tray.rs  wapi.rs
crates/yet-another-bg3-mod-loader/src/loader/: dirty.rs  enum_modules.rs  get_module_base_addr_ex.rs  get_module_base_ex.rs  get_module_file_name_ex.rs  write.rs
crates/yet-another-bg3-mod-loader/src/wapi/: enum_modules.rs  enum_process_modules.rs  enum_processes.rs  get_module_base_ex.rs  get_module_file_name_ex.rs  get_processes.rs  query_full_process_image_name.rs
src/: cli.rs  config.rs  helpers.rs  injector.rs  launcher_prefs.rs  lib.rs  loader.rs  panic.rs  paths.rs  popup.rs  process_watcher.rs  single_instance.rs  tray.rs  virtual_process_memory.rs
src/process_watcher/: apartment.rs  event.rs  event_sink.rs  variant.rs  watcher.rs
