[workspace]
resolver = "2"
members = ["crates/loader", "crates/shared", "crates/yabg3nml"]

[workspace.dependencies]
tracing = "0.1.40"
eyre = "0.6.12"
serde = { version = "1.0.210", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
shared = { path = "crates/shared" }
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }
unicase = "2.8.0"
winres = "0.1.12"
sha256 = "1.5.0"

[workspace.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
]

[profile.dev]
opt-level = 1

[profile.dev-dbg]
inherits = "dev"
opt-level = 0

[profile.release]
# include something at least
debug = "line-tables-only"
lto = true
codegen-units = 1
