[package]
name = "dbghelp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
console = []

[dependencies]
eyre = "0.6.12"
log = "0.4.20"
simplelog = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }
owo-colors = "4.0.0"
windows-dll = "0.4.1"

[dependencies.windows]
version = "0.53.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for console
    "Win32_System_Console",
    # for the wrapper
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
]

[build-dependencies]
winres = "0.1.12"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl"] }

[package.metadata.winres]
OriginalFilename = "dbghelp.dll"
LegalCopyright = "Copyright © 2024"
ProductName = "Yet Another BG3 Mod Loader"
FileDescription = "Loads dll plugins into the game"
