[package]
name = "bink2w64"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
console = []

[dependencies]
eyre = "0.6.12"
log = "0.4.21"
simplelog = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }
owo-colors = "4.0.0"
search_path = "0.1.4"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    # for the popup
    "Win32_UI_WindowsAndMessaging",
    # for console
    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl"] }
pelite = "0.10.0"
search_path = "0.1.4"
syn = "2.0.53"
quote = "1.0.35"
proc-macro2 = "1.0.79"

[package.metadata.winres]
OriginalFilename = "bink2w64.dll"
LegalCopyright = "Copyright © 2024"
ProductName = "Yet Another BG3 Mod Loader"
FileDescription = "Loads dll plugins into the game"
