[package]
name = "loader"
version = "0.1.0"
edition = "2021"
authors = ["Cherry"]
homepage = "https://github.com/MolotovCherry/Yet-Another-BG3-Native-Mod-Loader"
license = "MIT"
rust-version = "1.82"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
windows.workspace = true
shared.workspace = true
native-plugin-lib.workspace = true

[build-dependencies]
winres.workspace = true

[package.metadata.winres]
ProductName = "Plugin Loader"
FileDescription = "Dll loader for YABG3NML"
OriginalFilename = "loader.dll"
LegalCopyright = "Copyright (c) Cherry"
