[package]
name = "loader"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
windows.workspace = true
shared.workspace = true
native-plugin-lib.workspace = true

[lints]
workspace = true

[build-dependencies]
winres.workspace = true

[package.metadata.winres]
ProductName = "Plugin Loader"
FileDescription = "Dll loader for YABG3NML"
OriginalFilename = "loader.dll"
LegalCopyright = "Copyright (c) Cherry"
