[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
tracing.workspace = true
windows.workspace = true
unicase.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
directories = "6.0.0"
backtrace = "0.3.74"
toml = "0.8.20"
tokio = { version = "1.44.2", features = ["net", "rt"] }

[lints]
workspace = true
