[package]
name = "shared"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
eyre.workspace = true
tracing.workspace = true
windows.workspace = true
unicase.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
directories = "6.0.0"
backtrace = "0.3.75"
toml = "0.9.5"
tokio = { version = "1.45.1", features = ["net", "rt"] }

[lints]
workspace = true
