[package]
name = "shared"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
eyre.workspace = true
tracing.workspace = true
windows.workspace = true
unicase.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6.0.0"
backtrace = "0.3.76"
toml = "0.9.11"
tokio = { version = "1.49", features = ["net", "rt"] }

[lints]
workspace = true
