[package]
name = "yabg3nml"
version = "0.3.2"
edition = "2024"
authors = ["Cherry"]
homepage = "https://github.com/MolotovCherry/Yet-Another-BG3-Native-Mod-Loader"
license = "MIT"

[features]
test-injection = []

[dependencies]
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
windows.workspace = true
native-plugin-lib.workspace = true
unicase.workspace = true
sha256 = "1.6.0"
human-panic = "2.0.2"
tray-icon = "0.20.0"
tracing-appender = "0.2.3"
pelite = "0.10.0"
widestring = "1.2.0"
rand = "0.9.0"

[dependencies.argh]
git = "https://github.com/google/argh"
rev = "f02f6b44444b340a553ff2db298744721ebc77a7"
default-features = false

[build-dependencies]
winres.workspace = true

[lints]
workspace = true

[package.metadata.winres]
FileDescription = "Yet Another BG3 Native Mod Loader"
LegalCopyright = "Copyright (c) Cherry"
