[package]
name = "yabg3nml"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[features]
test-injection = []

[dependencies]
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
windows.workspace = true
native-plugin-lib.workspace = true
unicase.workspace = true
sayuri.workspace = true
sha256 = "1.6.0"
human-panic = "2.0.6"
tray-icon = "0.21.3"
tracing-appender = "0.2.4"
pelite = "0.10.0"
widestring = "1.2.1"
rand = "0.9.2"

[dependencies.argh]
version = "0.1.13"
default-features = false

[build-dependencies]
winres.workspace = true

[lints]
workspace = true

[package.metadata.winres]
FileDescription = "Yet Another BG3 Native Mod Loader"
LegalCopyright = "Copyright (c) Cherry"
