[package]
name = "yet-another-bg3-mod-loader"
version = "0.2.7"
edition = "2021"
authors = ["Cherry"]
homepage = "https://github.com/MolotovCherry/Yet-Another-BG3-Native-Mod-Loader"
license = "MIT"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
serde_json = "1.0.117"
directories = "5.0.1"
human-panic = "2.0.0"
eyre = "0.6.12"
backtrace = "0.3.72"
native-plugin-lib = { git = "https://github.com/MolotovCherry/Native-Plugin-Lib" }
tray-icon = "0.14.2"
winit = "0.30.0"
unicase = "2.7.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_System_ApplicationInstallationAndServicing",

    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",

    "Win32_Security",

    "Win32_System_ProcessStatus",

    "Win32_System_Console",
]

[build-dependencies]
winres = "0.1.12"
