[package]
name = "yet-another-bg3-mod-loader"
version = "0.2.7"
edition = "2021"
authors = ["Cherry"]
homepage = "https://github.com/MolotovCherry/Yet-Another-BG3-Native-Mod-Loader"
license = "MIT"

[dependencies]
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
windows.workspace = true
native-plugin-lib.workspace = true
unicase.workspace = true
human-panic = "2.0.1"
tray-icon = "0.19.0"
winit = "0.30.5"
tracing-appender = "0.2.3"
clap = { version = "4.5.18", features = ["derive"] }
tempfile = "3.13.0"
zstd = "0.13.2"

[build-dependencies]
winres = "0.1.12"
zstd = "0.13.2"
sha256 = "1.5.0"
# https://github.com/rust-lang/cargo/issues/9096
# https://doc.rust-lang.org/beta/cargo/reference/unstable.html#artifact-dependencies
loader = { path = "../loader", artifact = "cdylib" }

[package.metadata.winres]
ProductName = "Yet Another BG3 Mod Loader"
FileDescription = "Loads native plugins into BG3"
LegalCopyright = "Copyright (c) Cherry"
