[package]
name = "yet-another-bg3-mod-loader"
version = "0.3.0"
edition = "2021"
authors = ["Cherry"]
homepage = "https://github.com/MolotovCherry/Yet-Another-BG3-Native-Mod-Loader"
license = "MIT"

[features]
test-injection = []

[dependencies]
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
windows.workspace = true
native-plugin-lib.workspace = true
unicase.workspace = true
sha256.workspace = true
human-panic = "2.0.2"
tray-icon = "0.19.1"
winit = "0.30.5"
tracing-appender = "0.2.3"
clap = { version = "4.5.20", features = ["derive"] }
pelite = "0.10.0"
widestring = "1.1.0"
rand = "0.8.5"

[build-dependencies]
winres.workspace = true
sha256.workspace = true
# https://github.com/rust-lang/cargo/issues/9096
# https://doc.rust-lang.org/beta/cargo/reference/unstable.html#artifact-dependencies
loader = { path = "../loader", artifact = "cdylib" }

[package.metadata.winres]
FileDescription = "Yet Another BG3 Mod Loader"
LegalCopyright = "Copyright (c) Cherry"
